// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Should match snapshot - \`checked\` 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 20px;
}

.c4 {
  width: 0;
  opacity: 0;
}

.c6 {
  min-height: 20px;
  padding-left: 28px;
  cursor: pointer;
}

.c3:disabled ~ .c6 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3:checked ~ .c6 {
  color: #303030;
}

.c5 {
  position: absolute;
  width: 16px;
  height: 16px;
  border: 1px solid #B4B4B4;
  cursor: pointer;
}

.c5:after {
  content: '';
  position: absolute;
  top: 1px;
  left: 5px;
  display: none;
  width: 4px;
  height: 9px;
  border: solid #F16622;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3:checked ~ .c5:after {
  display: block;
}

.c3:disabled ~ .c5 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3:active:not(:disabled) ~ .c5,
.c3:focus:not(:disabled) ~ .c5 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c1:hover .c3:not(:disabled):not(:checked) ~ .c5 {
  border: 1px solid #303030;
}

<span
  class="c0"
>
  <label
    checked=""
    class="c1 c2"
  >
    <input
      checked=""
      class="c3 c4"
      type="checkbox"
    />
    <span
      class="c5"
    />
    <span
      class="c6"
    />
  </label>
</span>
`;

exports[`Checkbox Should match snapshot - highlight label 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 20px;
}

.c4 {
  width: 0;
  opacity: 0;
}

.c3:disabled ~ .c7 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3:checked ~ .c7 {
  color: #303030;
}

.c6 {
  min-height: 20px;
  padding-left: 28px;
  cursor: pointer;
}

.c3:disabled ~ .c6 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3:checked ~ .c6 {
  color: #F16622;
}

.c5 {
  position: absolute;
  width: 16px;
  height: 16px;
  border: 1px solid #B4B4B4;
  cursor: pointer;
}

.c5:after {
  content: '';
  position: absolute;
  top: 1px;
  left: 5px;
  display: none;
  width: 4px;
  height: 9px;
  border: solid #F16622;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3:checked ~ .c5:after {
  display: block;
}

.c3:disabled ~ .c5 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3:active:not(:disabled) ~ .c5,
.c3:focus:not(:disabled) ~ .c5 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c1:hover .c3:not(:disabled):not(:checked) ~ .c5 {
  border: 1px solid #303030;
}

<span
  class="c0"
>
  <label
    class="c1 c2"
  >
    <input
      class="c3 c4"
      type="checkbox"
    />
    <span
      class="c5"
    />
    <span
      class="c6"
    />
  </label>
</span>
`;

exports[`Checkbox Should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 20px;
}

.c4 {
  width: 0;
  opacity: 0;
}

.c6 {
  min-height: 20px;
  padding-left: 28px;
  cursor: pointer;
}

.c3:disabled ~ .c6 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3:checked ~ .c6 {
  color: #303030;
}

.c5 {
  position: absolute;
  width: 16px;
  height: 16px;
  border: 1px solid #B4B4B4;
  cursor: pointer;
}

.c5:after {
  content: '';
  position: absolute;
  top: 1px;
  left: 5px;
  display: none;
  width: 4px;
  height: 9px;
  border: solid #F16622;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3:checked ~ .c5:after {
  display: block;
}

.c3:disabled ~ .c5 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3:active:not(:disabled) ~ .c5,
.c3:focus:not(:disabled) ~ .c5 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c1:hover .c3:not(:disabled):not(:checked) ~ .c5 {
  border: 1px solid #303030;
}

<span
  class="c0"
>
  <label
    class="c1 c2"
  >
    <input
      class="c3 c4"
      type="checkbox"
    />
    <span
      class="c5"
    />
    <span
      class="c6"
    />
  </label>
</span>
`;
